# ProjectUnderstandingSystem

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: __init__.py  server.py
chunker/: __init__.py  code_chunker.py
config/: __init__.py  settings.py
docs/: IMPROVEMENT_PLAN.md  LAYERED_REBUILD_PLAN.md  MVP.md  UPGRADE_PLAN.md
parser/: __init__.py  repo_parser.py
pipeline/: __init__.py  orchestrator.py
src/project_understanding/: __init__.py  config.py
src/project_understanding/adapters/: llm_base.py  llm_openai_compatible.py
src/project_understanding/cli/: __init__.py  main.py
src/project_understanding/ingest/: business_glossary.py  convention_detector.py  domain_detector.py  enrichment.py  entity_extractor.py  glossary_generator.py  language_detect.py  parser_base.py  pipeline.py  relation_builder.py  risk_detector.py  scanner.py  summarizer.py
src/project_understanding/models/: __init__.py  conventions.py  entities.py  glossary.py  relations.py  snapshot.py  summaries.py
src/project_understanding/profiles/: __init__.py  models.py  registry.py
src/project_understanding/retrieval/: __init__.py  context_bundle.py  (+2 more)
src/project_understanding_v2/: __init__.py  cli.py  graph.py  models.py  parse.py  pipeline.py  review.py  scan.py  storage.py
storage/: __init__.py  json_store.py  markdown_store.py  vector_store.py
summarizer/: __init__.py  crew_summarizer.py  llm_summarizer.py
tests/unit/: test_domain_detector.py  test_domain_plugins.py  test_models.py  test_profiles.py  test_summarizer.py  test_v2_layered.py
(+33 files in other folders)
