[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-understanding"
version = "0.1.0"
description = "Project Understanding System — transforms a codebase into a shared, structured knowledge base for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Project Understanding Team"},
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.22",
    "tree-sitter-typescript>=0.22",
    "tree-sitter-c-sharp>=0.22",
    "click>=8.0",
    "openai>=1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
]

[project.scripts]
pus = "project_understanding.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]